force-app/main/default/objects/Quarterly_Plan__c/Quarterly_Plan__c.object-meta.xml
<CustomObject>
    <label>Quarterly Plan</label>
    <nameField>
        <label>Quarterly Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>