force-app/main/default/objects/Quarterly_Plan__c/fields/Admin_Private__c.field-meta.xml
<CustomField>
    <fullName>Admin_Private__c</fullName>
    <label>Admin Internal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>