force-app/main/default/objects/Quarterly_Plan__c/fields/Average_Ad_Hoc_Enablement__c.field-meta.xml
<CustomField>
    <fullName>Average_Ad_Hoc_Enablement__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Average Ad-Hoc Enablement</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>