force-app/main/default/objects/Quarterly_Plan__c/fields/Average_Design_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Average_Design_Sprint__c</fullName>
    <label>Average Design Sprint</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>