force-app/main/default/objects/Quarterly_Plan__c/fields/Average_DP_Contract__c.field-meta.xml
<CustomField>
    <fullName>Average_DP_Contract__c</fullName>
    <label>Average DP &amp; Contract</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>