force-app/main/default/objects/Quarterly_Plan__c/fields/Average_Product_Review__c.field-meta.xml
<CustomField>
    <fullName>Average_Product_Review__c</fullName>
    <label>Average Product Review</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>