force-app/main/default/objects/Quarterly_Plan__c/fields/Average_Selling_the_Platform__c.field-meta.xml
<CustomField>
    <fullName>Average_Selling_the_Platform__c</fullName>
    <label>Average Selling the Platform</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>