force-app/main/default/objects/Quarterly_Plan__c/fields/Average_SR__c.field-meta.xml
<CustomField>
    <fullName>Average_SR__c</fullName>
    <label>Average SR</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>