force-app/main/default/objects/Quarterly_Plan__c/fields/Average_TR__c.field-meta.xml
<CustomField>
    <fullName>Average_TR__c</fullName>
    <label>Average TR</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>