force-app/main/default/objects/Quarterly_Plan__c/fields/Average_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Average_Workshop__c</fullName>
    <label>Average Workshop</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>