force-app/main/default/objects/Quarterly_Plan__c/fields/Current_Av_Design_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Current_Av_Design_Sprint__c</fullName>
    <description>use for calculation only</description>
    <label>C-Av. Design Sprint</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>