force-app/main/default/objects/Quarterly_Plan__c/fields/Current_Av_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Current_Av_Workshop__c</fullName>
    <label>C-Av. Workshop</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>