force-app/main/default/objects/Quarterly_Plan__c/fields/Dreamforce__c.field-meta.xml
<CustomField>
    <fullName>Dreamforce__c</fullName>
    <label>Dreamforce</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>