force-app/main/default/objects/Quarterly_Plan__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>