force-app/main/default/objects/Quarterly_Plan__c/fields/Expert_Area__c.field-meta.xml
<CustomField>
    <fullName>Expert_Area__c</fullName>
    <label>Expert Area</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>