force-app/main/default/objects/Quarterly_Plan__c/fields/Expertise_Time__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Time__c</fullName>
    <formula>(Expert_Area__c +  PM_Activities__c) /  Total_Available_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Expertise Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>