force-app/main/default/objects/Quarterly_Plan__c/fields/Full_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Full_Utilisation__c</fullName>
    <formula>( Total_Available_Time__c - Remaining_Time__c )/ Total_Available_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Utilisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>