force-app/main/default/objects/Quarterly_Plan__c/fields/Internal_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Internal_Strategy__c</fullName>
    <label>Internal Strategy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>