force-app/main/default/objects/Quarterly_Plan__c/fields/Other_Time__c.field-meta.xml
<CustomField>
    <fullName>Other_Time__c</fullName>
    <formula>( VTO__c + PTO__c + Team_Call__c + PAM_Calls__c + Dreamforce__c +  Admin_Private__c +  Internal_Strategy__c )/  Total_Available_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Other Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>