force-app/main/default/objects/Quarterly_Plan__c/fields/PAM_Calls__c.field-meta.xml
<CustomField>
    <fullName>PAM_Calls__c</fullName>
    <label>PAM Call</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>