force-app/main/default/objects/Quarterly_Plan__c/fields/Partner_Time__c.field-meta.xml
<CustomField>
    <fullName>Partner_Time__c</fullName>
    <formula>Total_Partner_Time_Formula__c / Total_Available_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Partner Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>