force-app/main/default/objects/Quarterly_Plan__c/fields/PM_Activities__c.field-meta.xml
<CustomField>
    <fullName>PM_Activities__c</fullName>
    <label>PM Activities</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>