force-app/main/default/objects/Quarterly_Plan__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quarter</label>
    <referenceTo>Quarter__c</referenceTo>
    <relationshipLabel>Quarterly Plans</relationshipLabel>
    <relationshipName>Quarterly_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>