force-app/main/default/objects/Quarterly_Plan__c/fields/Quarter_Name__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Name__c</fullName>
    <formula>Quarter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Name*</label>
    <type>Text</type>
</CustomField>