force-app/main/default/objects/Quarterly_Plan__c/fields/Remaining_Time__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Time__c</fullName>
    <formula>Total_Available_Time__c - Total_Partner_Time_Formula__c - (Admin_Private__c + Dreamforce__c + Event__c + Expert_Area__c + Internal_Strategy__c + PAM_Calls__c + PTO__c + Self_Learning__c +  Team_Call__c + Training__c + VTO__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>