force-app/main/default/objects/Quarterly_Plan__c/fields/Scale_Activitiesq__c.field-meta.xml
<CustomField>
    <fullName>Scale_Activitiesq__c</fullName>
    <formula>Event__c /  Total_Available_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Scale Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>