force-app/main/default/objects/Quarterly_Plan__c/fields/Self_Enablement__c.field-meta.xml
<CustomField>
    <fullName>Self_Enablement__c</fullName>
    <formula>( Self_Learning__c + Training__c )/  Total_Available_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Self- Enablement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>