force-app/main/default/objects/Quarterly_Plan__c/fields/Self_Learning__c.field-meta.xml
<CustomField>
    <fullName>Self_Learning__c</fullName>
    <label>Learning</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>