force-app/main/default/objects/Quarterly_Plan__c/fields/Team_Call__c.field-meta.xml
<CustomField>
    <fullName>Team_Call__c</fullName>
    <label>Team Call</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>