force-app/main/default/objects/Quarterly_Plan__c/fields/Total_Available_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Time__c</fullName>
    <defaultValue>IF( $User.FirstName =&quot;Kevin&quot;, 488, 520)</defaultValue>
    <description>13 weeks * 5 days * 8 hours = 520
13 weeks * 5 days * 7.5 hours = 487.5 rounded to 488</description>
    <inlineHelpText>520 for Nico, Uli, Kees
488 for Kevin</inlineHelpText>
    <label>Total Workable Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>