force-app/main/default/objects/Quarterly_Plan__c/fields/Total_SR_Done__c.field-meta.xml
<CustomField>
    <fullName>Total_SR_Done__c</fullName>
    <label>Total SR Done</label>
    <summaryFilterItems>
        <field>Partner_Plan__c.SR_Done__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Plan__c.Quarterly_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>