force-app/main/default/objects/Quarterly_Plan__c/fields/Total_SR_Planned__c.field-meta.xml
<CustomField>
    <fullName>Total_SR_Planned__c</fullName>
    <label>Total SR Planned</label>
    <summarizedField>Partner_Plan__c.has_SR_planned__c</summarizedField>
    <summaryFilterItems>
        <field>Partner_Plan__c.Priority__c</field>
        <operation>equals</operation>
        <value>P1</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Plan__c.Quarterly_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>