force-app/main/default/objects/Quarterly_Plan__c/fields/Total_TR_Planned__c.field-meta.xml
<CustomField>
    <fullName>Total_TR_Planned__c</fullName>
    <label>Total TR Planned</label>
    <summaryFilterItems>
        <field>Partner_Plan__c.Needs_TR__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Partner_Plan__c.Priority__c</field>
        <operation>equals</operation>
        <value>P1</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Plan__c.Quarterly_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>