force-app/main/default/objects/Quarterly_Plan__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>