force-app/main/default/objects/Quarterly_Plan__c/fields/VTO__c.field-meta.xml
<CustomField>
    <fullName>VTO__c</fullName>
    <label>VTO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>