force-app/main/default/objects/Quarterly_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Time__c</columns>
    <columns>Full_Utilisation__c</columns>
    <columns>Total_DP_Planned__c</columns>
    <columns>Expertise_Time__c</columns>
    <columns>Self_Enablement__c</columns>
    <columns>Scale_Activitiesq__c</columns>
    <columns>Other_Time__c</columns>
    <columns>Quarter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>