force-app/main/default/objects/Quarterly_Plan__c/listViews/This_Quarter.listView-meta.xml
<ListView>
    <fullName>This_Quarter</fullName>
    <columns>NAME</columns>
    <columns>Partner_Time__c</columns>
    <columns>Total_TR_Done__c</columns>
    <columns>Total_TR_Planned__c</columns>
    <columns>Average_Ad_Hoc_Enablement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quarter__c</field>
        <operation>equals</operation>
        <value>Q4 FY19</value>
    </filters>
    <label>This Quarter</label>
</ListView>